improve new case buttons, show cases during case creation

--- a/app/views/metrics/monthly.html.erb
+++ b/app/views/metrics/monthly.html.erb
@@ -2,7 +2,7 @@
 
 <div class="date-select">
 <%= form_tag metrics_monthly_path, method: 'get' do %>
-  <%= text_field_tag :date, @date, class: "date-select-icon" %>
+  <%= text_field_tag :date, @date, class: "datepicker" %>
   <%= submit_tag "Set date", name: nil, class: "btn btn-large btn-primary" %>
 <% end %>
 </div>
