--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require bootstrap-editable
+ *= require select2
+ *= require select2-bootstrap
  *= require chosen
  *= require datepicker
  *= require tooltipster
