--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -46,6 +46,77 @@ textarea {
 	margin-top: 50px;
 }
 
+/* ---- padding ---- */
+/* top */
+.pad-top0 { padding-top: 0; }
+.pad-top5 { padding-top: 5px; }
+.pad-top10 { padding-top: 10px; }
+.pad-top15 { padding-top: 15px; }
+.pad-top20 { padding-top: 20px; }
+.pad-top25 { padding-top: 25px; }
+.pad-top30 { padding-top: 30px; }
+.pad-top35 { padding-top: 35px; }
+.pad-top40 { padding-top: 40px; }
+
+/* bottom */
+.pad-bot0 { padding-bottom: 0; }
+.pad-bot5 { padding-bottom: 5px; }
+.pad-bot10 { padding-bottom: 10px; }
+.pad-bot15 { padding-bottom: 15px; }
+.pad-bot20 { padding-bottom: 20px; }
+.pad-bot25 { padding-bottom: 25px; }
+.pad-bot30 { padding-bottom: 30px; }
+.pad-bot35 { padding-bottom: 35px; }
+.pad-bot40 { padding-bottom: 40px; }
+
+
+/* ---- margin --- */
+.mar-left5 { margin-left: 5px; }
+.mar-left10 { margin-left: 10px; }
+.mar-left15 { margin-left: 15px; }
+.mar-left20 { margin-left: 20px; }
+.mar-left25 { margin-left: 25px; }
+.mar-left30 { margin-left: 30px; }
+
+.mar-right5 { margin-right: 5px; }
+.mar-right10 { margin-right: 10px; }
+.mar-right15 { margin-right: 15px; }
+.mar-right20 { margin-right: 20px; }
+.mar-right25 { margin-right: 25px; }
+.mar-right30 { margin-right: 30px; }
+
+/* top */
+.mar-top0 { margin-top: 0; }
+.mar-top5 { margin-top: 5px; }
+.mar-top10 { margin-top: 10px; }
+.mar-top15 { margin-top: 15px; }
+.mar-top20 { margin-top: 20px; }
+.mar-top25 { margin-top: 25px; }
+.mar-top30 { margin-top: 30px; }
+.mar-top35 { margin-top: 35px; }
+.mar-top40 { margin-top: 40px; }
+.mar-top50 { margin-top: 50px; }
+.mar-top60 { margin-top: 60px; }
+.mar-top70 { margin-top: 70px; }
+.mar-top80 { margin-top: 80px; }
+.mar-top100 { margin-top: 100px; }
+.mar-top130 { margin-top: 130px; }
+
+/* bottom */
+.mar-bot0 { margin-bottom: 0; }
+.mar-bot5 { margin-bottom: 5px; }
+.mar-bot10 { margin-bottom: 10px; }
+.mar-bot15 { margin-bottom: 15px; }
+.mar-bot20 { margin-bottom: 20px; }
+.mar-bot25 { margin-bottom: 25px; }
+.mar-bot30 { margin-bottom: 30px; }
+.mar-bot35 { margin-bottom: 35px; }
+.mar-bot40 { margin-bottom: 40px; }
+.mar-bot50 { margin-bottom: 50px; }
+.mar-bot60 { margin-bottom: 60px; }
+.mar-bot80 { margin-bottom: 80px; }
+.mar-bot100 { margin-bottom: 100px; }
+
 .wrapper {
 	width: 100%;
 	text-align: center;
@@ -136,6 +207,40 @@ h3 {
 	padding: 0;
 }
 
+@mixin btn-round {
+  display:block;
+  border: 2px solid #f5f5f5;
+  border-radius: 50%;
+  color:#f5f5f5;
+  text-align:center;
+  text-decoration:none;
+  background: #464646;
+  box-shadow: 0 0 3px gray;
+  font-weight:bold;
+  margin: 0 auto;
+	 &:hover {
+		 background: #262626;
+		 color: white;
+	}
+}
+
+.btn-round-lg {
+	@include btn-round;
+	width:80px;
+  height:80px;
+  line-height:50px;
+  font-size:34px;
+  padding-top: 12px;
+}
+
+.btn-round-sm {
+	@include btn-round;
+	width:50px;
+  height:50px;
+  line-height: 43px;
+  font-size: 18px;
+}
+
 /* Forms */
 
 input, textarea, select, .uneditable-input {
@@ -157,6 +262,7 @@ input, textarea, select, .uneditable-input {
 }
 
 .form-submit-btns {
+	margin-top: 20px;
 	span {
 		color: $gray;
 	}
@@ -174,11 +280,6 @@ input, textarea, select, .uneditable-input {
 	float: right;
 	margin:35px 0 0 0;
 }
-
-.date-select-icon {
-	
-}
-
 
 .today-btn {
 	float: right;
@@ -226,15 +327,32 @@ input, textarea, select, .uneditable-input {
 /* Cases table */
 
 .col-time {
-	width: 85px;
+	min-width: 95px;
+}
+
+.col-type {
+	min-width: 90px;
 }
 
 .col-person {
 	white-space: nowrap;
+	min-width: 120px;
+}
+
+.col-length {
+	min-width: 65px;
 }
 
 .col-tags {
-	width: 100px;
+	min-width: 130px;
+}
+
+.col-rep {
+	min-width: 80px;
+}
+
+.col-app-note {
+	min-width: 68px;
 }
 
 .highlight-red {
