Fix cases table width

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -326,6 +326,10 @@ input, textarea, select, .uneditable-input {
 
 /* Cases table */
 
+.logs-table {
+	max-width: 90%;
+}
+
 .col-time {
 	min-width: 80px;
 }
