--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	<div class="col-md-6 col-md-offset-1">
 		<%= render 'users/partials/followups_table' %>
 	</div>
-	<div class="col-md-4 col-md-offset-1">
+	<div class="col-md-4">
 		<%= render 'users/partials/pricing_widget' %>
 	</div>
 </div>
