--- a/app/views/metrics/weekdays.html.erb
+++ b/app/views/metrics/weekdays.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Weekday Metrics') %>
-<div class="row">
+<div class="row mar-top30">
 <div class="col-sm-10 col-sm-offset-1">
 
 <div class="date-select">
