--- a/app/views/metrics/monthly.html.erb
+++ b/app/views/metrics/monthly.html.erb
@@ -1,22 +1,6 @@
 <div class="col-xs-12">
-
-<div class="date-select">
-<%= form_tag metrics_monthly_path, method: 'get' do %>
-  <%= text_field_tag :date, @date, class: "datepicker" %>
-  <%= submit_tag "Set date", name: nil, class: "btn btn-large btn-primary" %>
-<% end %>
-</div>
-
-<% unless @date.to_date == Date.today %> 
-<div class="today-btn">
-	<%= form_tag metrics_monthly_path, method: 'get' do %>
-	  <%= hidden_field_tag :date, Date.today %>
-	  <%= submit_tag "(Today)", name: nil, class: "transparent-btn"  %>
-	<% end %>
-</div>
-<% end %>
 	
-<h3>Monthly Metrics</h3>
+<h3 class="mar-top50">Monthly Metrics</h3>
 
 <div class="wrapper">
 <div class="next-prev-wrapper">
@@ -28,6 +12,29 @@
 	</div>
 
 	<div class="next-prev-title"><%= @date.to_date.strftime("%b %Y") %></div>
+
+	<!-- 'Go To Date' Selector -->
+  <div class="go-to-date-selector">
+    <div class="close-date-selector">
+      <%= image_tag "close-btn.png" %>
+    </div>
+    <!-- Date text box -->
+    <div class="date-select">
+      <%= form_tag metrics_monthly_path, method: 'get' do %>
+        <%= text_field_tag :date, @date, class: "datepicker" %>
+        <%= submit_tag "Go!", name: nil, class: "btn btn-large btn-primary" %>
+      <% end %>
+    </div>
+
+    <div class="today-btn">
+      <!-- 'Today' link -->
+      <%= form_tag metrics_monthly_path, method: 'get' do %>
+        <%= hidden_field_tag :date, Date.today %>
+        <%= submit_tag "(Today)", name: nil, class: "btn btn-xs btn-default float-right"  %>
+      <% end %>
+    </div>
+  </div>
+	<!-- End of 'Go To Date' Selector -->
 	
 	<% if @date.to_date != Date.today %>
 	<div class="next-btn">
