--- a/app/assets/stylesheets/logs.css.scss
+++ b/app/assets/stylesheets/logs.css.scss
@@ -217,11 +217,29 @@
 	margin-top: 6px;
 }
 
-.my_clip_button {
+// .my_clip_button {
+// 	display: inline;
+// 	margin-right: 8px;
+// 	font-size: 18px;
+// 	cursor: pointer;
+// }
+
+.st-icon-btn {
 	display: inline;
 	margin-right: 8px;
 	font-size: 18px;
 	cursor: pointer;
+	a {
+		color: #333;
+		&:hover {
+			color: #428bca;
+			text-decoration: none;
+		}
+	}
+	span {
+		font-size: 12px;
+		margin-left: 5px;
+	}
 }
 
 .zeroclipboard-is-hover {
@@ -230,4 +248,17 @@
 
 .zeroclipboard-is-active {
 	color: #254E71;
+}
+
+#show-followup-btn {
+	text-align: center;
+	padding: 10px;
+	margin: 10px auto 0;
+	border-radius: 5px;
+	font-size: 16px;
+	line-height: 1.1;
+	i {
+		font-size: 20px;
+		margin-right: 5px;
+	}
 }
