--- a/app/assets/javascripts/custom.js.erb
+++ b/app/assets/javascripts/custom.js.erb
@@ -19,12 +19,12 @@ $(document).ready(function(){
 		kcCustID = $(this).find(':selected').data('kc_cust_id');
 		// update the link's href value 
 		$("#kc-app-link").attr("href", createKidCheckAppUrl(kcCustID));
-
 	});
 
 	// For the 'copy to clipboard' functionality
 	var clip = new ZeroClipboard($("#d_clip_button"))
 
+	// Since copy contents are pulled from DB, remove copy button if unsaved change is made.
 	$('#log_description').keyup(function() {
 		$('.my_clip_button').hide()
 	});
