--- a/app/assets/stylesheets/logs.css.scss
+++ b/app/assets/stylesheets/logs.css.scss
@@ -211,6 +211,11 @@
 		background-color: #FFF4EC;
 	}
 	
+	.followup-btns {
+		white-space: nowrap;
+		float: right;
+	}
+	
 	a.followup-btn {
 		display: inline-block;
 		margin: 2px 3px;
